--- a/v0ncentartsite/server/pom.xml
+++ b/v0ncentartsite/server/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>${slf4jVersion}</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>2.2.4</version>
+        </dependency>
     </dependencies>
 
 </project>
