--- a/v0ncentartsite/server/pom.xml
+++ b/v0ncentartsite/server/pom.xml
@@ -56,6 +56,10 @@
             <artifactId>jakarta.validation-api</artifactId>
             <version>3.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
