--- a/.github/workflows/languages.yaml
+++ b/.github/workflows/languages.yaml
@@ -16,6 +16,7 @@ jobs:
         with:
           filename: metrics.plugin.languages.svg
           token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
           template: repository
           repo: v0ncentArtSite
           plugin_languages: yes
